:bug: FIX_scroll horizontal on mobile

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@ html{
     font-family: 'Ubuntu';
     color: #20222D;
     margin: 0;
+    overflow-x: hidden; 
 }
 
 * {
